Update contact and copyright information

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name = Signer-AWSv4
-author = Jose Luis Martinez <joseluis.martinez@capside.com>
+author = Jose Luis Martinez <pplusdomain@gmail.com>
 license = Apache_2_0
-copyright_holder = CAPSiDE
+copyright_holder = Jose Luis Martinez
 copyright_year = 2018
 main_module = lib/Signer/AWSv4.pm
 
